# libdc_posix_optional

./: CMakeLists.txt
include/dc_posix_optional/: dc_aio.h  dc_fcntl.h  dc_mqueue.h  dc_pthread.h  dc_sched.h  dc_spawn.h  dc_stdlib.h  dc_time.h
include/dc_posix_optional/sys/: dc_mman.h
src/: aio.c  fcntl.c  pthread.c  sched.c  spawn.c  stdlib.c  time.c
src/sys/: mman.c
tests/: CMakeLists.txt
